Fix video/text alignment

--- a/src/css/cuevideos.css
+++ b/src/css/cuevideos.css
@@ -48,6 +48,6 @@
 .cuesection2 .indivcue2 #aboutcue2 {
   padding-left: 10%;
   padding-top: 2.5%;
+  padding-right: 37%;
   font: 1.2em "Raleway", sans-serif;
-  float: left;
 }
